--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "author": "Liam",
   "license": "ISC",
   "dependencies": {
+    "electron-cookies": "^1.1.0",
+    "electron-nucleus": "^0.2.0",
+    "google-analytics-electron": "^0.1.2",
     "jquery": "^3.2.1",
     "request": "^2.83.0"
   },
